--- a/cars.html
+++ b/cars.html
@@ -3,21 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="author" content="Kaushan Illia">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
     <title>Cars</title>
 </head>
-<body link="red" vlink="blue" alink="pink" bgcolor="457b9d">
-    <h1><font color="f0f8ff">Choose your BMW</font></h1>
-    <p><font color="f0f8ff">Are you looking for a luxury sedan, a sporty coupe, or a versatile SUV?</font></p>
-    <p><font color="f0f8ff">BMW offers a wide range of vehicles to suit every taste and lifestyle.</font></p>
-    <p><font color="f0f8ff">Explore our collection and find the perfect BMW for you.</font></p>
-    <h2><font color="f0f8ff">Our advantages:</font></h2>
+<body class="cars">
+
+    <h1>Choose your BMW</h1>
+    <p>Are you looking for a luxury sedan, a sporty coupe, or a versatile SUV?</p>
+    <p>BMW offers a wide range of vehicles to suit every taste and lifestyle.</p>
+    <p>Explore our collection and find the perfect BMW for you.</=></p>
+    <h2>Our advantages:</h2>
     <ol type="1">
-        <li><font color="f0f8ff">Comfort</font></li>
-        <li><font color="f0f8ff">Reliability</font></li>
-        <li><font color="f0f8ff">Performance</font></li>
-        <li><font color="f0f8ff">Innovative technology</font></li>
-        <li><font color="f0f8ff">Luxurious interiors</font></li>
+        <li>Comfort</li>
+        <li>Reliability</li>
+        <li>Performance</li>
+        <li>Innovative technology</li>
+        <li>Luxurious interiors</li>
     </ol>
-    <p><font color="f0f8ff">Back to <a href="main.html#top">home</a>.</font></p>
+    <p class="history_back">Back to <a href="main.html#top">home</a>.</p>
 </body>
 </html>
