--- a/history.html
+++ b/history.html
@@ -3,20 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="author" content="Kaushan Illia">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
     <title>History</title>
 </head>
-<body link="red" vlink="blue" alink="pink" bgcolor="457b9d">
-    <h1><font color="f0f8ff">Let's dive into the history of one of the greatest automotive company</font></h1>
-    <p><font color="f0f8ff">BMW has a rich history dating back to its founding in 1916.</font></p>
-    <p><font color="f0f8ff">From its early days as an aircraft engine manufacturer to becoming one of the leading luxury car brands in the world, BMW has continually pushed the boundaries of innovation and engineering.</font></p>
-    <p><font color="f0f8ff">Learn more about the fascinating history of BMW and its impact on the automotive industry.</font></p>
-    <table border="3" cellspacing="10" cellpadding="10">
+<body class="history">
+    <h1 class="history_h1">Let's dive into the history of one of the greatest automotive company</h1>
+    <p>BMW has a rich history dating back to its founding in 1916.</p>
+    <p>From its early days as an aircraft engine manufacturer to becoming one of the leading luxury car brands in the world, BMW has continually pushed the boundaries of innovation and engineering.</p>
+    <p>Learn more about the fascinating history of BMW and its impact on the automotive industry.</p>
+    <table class="history_table">
         <colgroup>
-            <col bgcolor="lightgray">
+            <col class="col1">
         </colgroup>
         <tr>
             <td rowspan="2" align="center" valign="middle"><img src="img/BMW.svg.png" alt="logo" width="30px" height="30px"></td>
-            <td colspan="2" align="center">History</td>
+            <th colspan="2">History</th>
         </tr>
         <tr>
             <td align="left">1916</td>
@@ -35,7 +37,6 @@
             <td colspan="2">Franz Josef Popp, Karl Rapp, Gustav Otto and Camillo Castiglioni founded Bayerische Flugzeugwerke AG in 1916 which became BMW in 1917.</td>
         </tr>
     </table>
-    <iframe src="https://en.wikipedia.org/wiki/BMW" width="400" height="600" style="width: 400px; height: 600px; position: fixed; top: 50px; right: 20px; border: 1px solid black;"></iframe>
-    <p><font color="f0f8ff">Back to <a href="main.html#top">home</a>.</font></p>
+    <p>Back to <a href="main.html#top">home</a>.</p>
 </body>
 </html>
