--- a/main.html
+++ b/main.html
@@ -3,15 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="author" content="Kaushan Illia">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
+    <style>
+        a {
+            text-decoration: none;
+            color: #f0f8ff;
+            font-weight: bold;
+        }
+    </style>
     <title>BMW Auto</title>
 </head>
-<body link="red" vlink="blue" alink="pink" background="img/wp2922360.jpg">
-    <h1 align="center"><a name="top"><font color="f0f8ff" size="80px">BMW - as fast as possible</font></a></h1>
-    <p align="center"><font color="f0f8ff">Dive in the history of BMW and its legendary cars.</font></p>
-    <p align="center"><a href="#legend">Explore</a><font color="f0f8ff"> everything possible</font></p>
-    <p align="center"><font color="f0f8ff"><a name="legend">Learn more about the <a href="legends.html">legends</a> that made BMW famous.</font></a> </p>
-    <p align="center"><font color="f0f8ff">Ready to choose your dream car? Check out our <a href="cars.html">selection</a>.</font></p>
-    <p align="center"><font color="f0f8ff">Curious about the <a href="history.html">history</a> of BMW? Let's dive in!</font></p>
-    <p align="center"><font color="f0f8ff">Don't forget about our <a href="https://www.youtube.com/@BMW" target="_blank">Youtube</a></font></p>
+<body class="main">
+    <nav>
+        <ul class="navigateMenu">
+            <li><a name="legend" href="legends.html">Legends</a></li>
+            <li><a href="cars.html">Selection</a></li>
+            <li><a href="history.html">History</a></li>
+        </ul>
+    </nav>
+    <div class="mainH1">
+        <h1><a name="top">BMW - as fast as possible</a></h1>
+        <p style="font-family: 'Montserrat', sans-serif; font-size: 20px; color: #f0f8ff; line-height: 1.5; ">Dive in the history of BMW and its legendary cars</p>
+    </div>
+    <a href="#legend" id="mainLink">Explore everything</a>
 </body>
 </html>
