--- a/cars.html
+++ b/cars.html
@@ -12,7 +12,7 @@
 
     <h1>Choose your BMW</h1>
     <p>Are you looking for a luxury sedan, a sporty coupe, or a versatile SUV?</p>
-    <p>BMW offers a wide range of vehicles to suit every taste and lifestyle.</p>
+    <p><i>BMW offers a wide range of vehicles </i><b>to suit every taste and lifestyle.</b></p>
     <p>Explore our collection and find the perfect BMW for you.</=></p>
     <h2>Our advantages:</h2>
     <ol type="1">
