--- a/main.html
+++ b/main.html
@@ -24,7 +24,7 @@
     </nav>
     <div class="mainH1">
         <h1><a name="top">BMW - as fast as possible</a></h1>
-        <p style="font-family: 'Montserrat', sans-serif; font-size: 20px; color: #f0f8ff; line-height: 1.5; ">Dive in the history of BMW and its legendary cars</p>
+        <p style="font-family: 'Montserrat', sans-serif; font-size: 20px; line-height: 1.5; ">Dive in the history of BMW and its legendary cars</p>
     </div>
     <a href="#legend" id="mainLink">Explore everything</a>
 </body>
