--- a/cars.html
+++ b/cars.html
@@ -13,15 +13,16 @@
     <h1>Choose your BMW</h1>
     <p>Are you looking for a luxury sedan, a sporty coupe, or a versatile SUV?</p>
     <p><i>BMW offers a wide range of vehicles </i><b>to suit every taste and lifestyle.</b></p>
-    <p>Explore our collection and find the perfect BMW for you.</=></p>
+    <p><i>Explore our collection and find </i><b>the perfect BMW for you.</b></p>
+    <img class="cars_img" src="img/bmw-m5-black.jpg" width="100%" height="1080px">
     <h2>Our advantages:</h2>
-    <ol type="1">
+    <ol type="1" class="cars_list">
         <li>Comfort</li>
         <li>Reliability</li>
         <li>Performance</li>
         <li>Innovative technology</li>
         <li>Luxurious interiors</li>
     </ol>
-    <p class="history_back">Back to <a href="main.html#top">home</a>.</p>
+    <span class="cars_span">Back to <a href="main.html#top">home</a>.</span>
 </body>
 </html>
