--- a/history.html
+++ b/history.html
@@ -37,6 +37,11 @@
             <td colspan="2">Franz Josef Popp, Karl Rapp, Gustav Otto and Camillo Castiglioni founded Bayerische Flugzeugwerke AG in 1916 which became BMW in 1917.</td>
         </tr>
     </table>
-    <p>Back to <a href="main.html#top">home</a>.</p>
+    <img class="history_img" src="img/g60-bev-tech-data-stage-ext-3-4-front.webp" width="400px" height="400px">
+    <p>The Otto Flugmaschinenfabrik was founded in 1910 by Gustav Otto in the Kingdom of Bavaria, which was a state of the German Empire. The firm was reorganized on 7 March 1916 into Bayerische Flugzeugwerke AG. This company was then renamed to Bayerische Motoren Werke (BMW) in 1922. However, the name BMW dates back to 1913, when a company to use the name was founded by Karl Rapp initially as Rapp Motorenwerke. The name and Rapp Motorenwerke's engine-production assets were transferred to Bayerische Flugzeugwerke in 1922, who adopted the name the same year. BMW's first product was produced for fighter aircraft of the Luftstreitkrafte. It was a straight-six aircraft engine called the BMW IIIa, designed in the spring of 1917 by engineer Max Friz. Following the end of World War I, BMW remained in business by producing motorcycle engines, agricultural equipment, household items, and railway brakes. The company produced its first motorcycle, the BMW R 32, in 1923.
+
+        BMW became an automobile manufacturer in 1928 when it purchased Fahrzeugfabrik Eisenach, which, at the time, built the Austin 7 under licence from Dixi. The first car sold as a BMW was a rebadged BMW Dixi called the BMW 3/15, following BMW's acquisition of the car manufacturer Automobilwerk Eisenach. Throughout the 1930s, BMW expanded its range into sports cars and larger luxury cars.</p>
+    
+    <p style="margin-top: 75px;">Back to <a href="main.html#top">home</a>.</p>
 </body>
 </html>
