--- a/main.html
+++ b/main.html
@@ -6,10 +6,21 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <style>
-        a {
-            text-decoration: none;
+        a:link {
             color: #f0f8ff;
             font-weight: bold;
+            text-decoration: none; 
+        }
+        a:visited {
+            color: #e9f5ff;
+        }
+
+        a:hover {
+            color: #7a8eff; 
+        }
+
+        a:active {
+            color: #5900ff;
         }
     </style>
     <title>BMW Auto</title>
@@ -22,8 +33,8 @@
             <li><a href="history.html">History</a></li>
         </ul>
     </nav>
-    <div class="mainH1">
-        <h1><a name="top">BMW - as fast as possible</a></h1>
+    <div class="main_div">
+        <h1 id="top">BMW - as fast as possible</h1>
         <p style="font-family: 'Montserrat', sans-serif; font-size: 20px; line-height: 1.5; ">Dive in the history of BMW and its legendary cars</p>
     </div>
     <a href="#legend" id="mainLink">Explore everything</a>
