--- a/main.html
+++ b/main.html
@@ -12,7 +12,7 @@
             text-decoration: none; 
         }
         a:visited {
-            color: #e9f5ff;
+            color: #f0f8ff;
         }
 
         a:hover {
@@ -38,5 +38,6 @@
         <p style="font-family: 'Montserrat', sans-serif; font-size: 20px; line-height: 1.5; ">Dive in the history of BMW and its legendary cars</p>
     </div>
     <a href="#legend" id="mainLink">Explore everything</a>
+    <script src="script.js"></script>
 </body>
 </html>
