--- a/history.html
+++ b/history.html
@@ -43,5 +43,12 @@
         BMW became an automobile manufacturer in 1928 when it purchased Fahrzeugfabrik Eisenach, which, at the time, built the Austin 7 under licence from Dixi. The first car sold as a BMW was a rebadged BMW Dixi called the BMW 3/15, following BMW's acquisition of the car manufacturer Automobilwerk Eisenach. Throughout the 1930s, BMW expanded its range into sports cars and larger luxury cars.</p>
     
     <p style="margin-top: 75px;">Back to <a href="main.html#top">home</a>.</p>
+    <script>
+    document.body.style.background = '#023047';
+        setTimeout(() => document.body.style.background = '', 30000);
+
+    if (confirm("Перейти на сторінку wiki?")) {
+    location.href = "https://en.wikipedia.org/wiki/BMW";}
+    </script>
 </body>
 </html>
